--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -7,51 +7,51 @@
 <form method="post" action="/users/register">
    <div class="form-group">
     <label>Username</label>
-    <input type="text" class="form-control" placeholder="Name" name="username">
+    <input type="text" class="form-control" placeholder="Name" name="username" required>
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password">
+    <input type="password" class="form-control" placeholder="Password" name="password" required>
   </div>
   <div class="form-group">
     <label>Confirm Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password2">
+    <input type="password" class="form-control" placeholder="Password" name="password2" required>
   </div>
   <div class="form-group">
     <label>First Name</label>
-    <input type="text" class="form-control" placeholder="First Name" name="firstname">
+    <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
   </div>
   <div class="form-group">
     <label>Last Name</label>
-    <input type="text" class="form-control" placeholder="Last Name" name="lastname">
+    <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
   </div>
   <div class="form-group">
     <label>Street Number</label>
-    <input type="text" class="form-control" placeholder="Street Number" name="streetnumber">
+    <input type="text" class="form-control" placeholder="Street Number" name="streetnumber" required>
   </div>
   <div class="form-group">
     <label>Street Name</label>
-    <input type="text" class="form-control" placeholder="Street Name" name="streetname">
+    <input type="text" class="form-control" placeholder="Street Name" name="streetname" required>
   </div>
   <div class="form-group">
     <label>City</label>
-    <input type="text" class="form-control" placeholder="City" name="city">
+    <input type="text" class="form-control" placeholder="City" name="city" required>
   </div>
   <div class="form-group">
     <label>Gender</label>
-    <input type="text" class="form-control" placeholder="Gender" name="gender">
+    <input type="text" class="form-control" placeholder="Gender" name="gender" required>
   </div>
    <div class="form-group">
     <label>Email</label>
-    <input type="email" class="form-control" placeholder="Email" name="email">
+    <input type="email" class="form-control" placeholder="Email" name="email" required>
   </div>
   <div class="form-group">
     <label>Phone Number</label>
-    <input type="text" class="form-control" placeholder="Phone Number" name="phonenumber">
+    <input type="text" class="form-control" placeholder="Phone Number" name="phonenumber" required>
   </div>
   <div class="form-group">
     <label>Date of Birth</label>
-    <input type="text" class="form-control" placeholder="Date of Birth" name="dob">
+    <input type="text" class="form-control" placeholder="Date of Birth" name="dob" required>
   </div>
   
   <button type="submit" class="btn btn-default">Submit</button>
