--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,7 +3,10 @@
 <head>
 	<title>LoginApp</title>
 	 <link rel="stylesheet" href="/css/bootstrap.css" />
-	<link rel="stylesheet" href="/css/style.css" /> 
+	 <link rel="stylesheet" href="/css/style.css" /> 
+   <script src="/js/jquery.min.js"></script>
+   <script src="/js/jquery.validate.min.js"></script>
+   <script src="/js/my.js"></script>
 </head>
 <body>
 	<div class="container">
