--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,18 +4,14 @@
         <div class="alert alert-danger">{{msg}}</div>
       {{/each}}
 {{/if}}
-<form method="post" action="/users/register">
+<form method="post" action="/users/register" id="form-register">
    <div class="form-group">
     <label>Username</label>
     <input type="text" class="form-control" placeholder="Name" name="username" required>
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password" required>
-  </div>
-  <div class="form-group">
-    <label>Confirm Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password2" required>
+    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
   </div>
   <div class="form-group">
     <label>First Name</label>
@@ -53,6 +49,6 @@
     <label>Date of Birth</label>
     <input type="text" class="form-control" placeholder="Date of Birth" name="dob" required>
   </div>
-  
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
+
