--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,9 @@ body {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
+h2{
+  margin-bottom: 40px;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
