--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LoginApp</title>
+	<title>TouristResApp</title>
 	 <link rel="stylesheet" href="/css/bootstrap.css" />
+	 <link rel="stylesheet" href="/css/jquery-ui.css" /> 
+	 <link rel="stylesheet" href="/css/jquery-ui.structure.css" /> 
+	 <link rel="stylesheet" href="/css/jquery-ui.theme.css" /> 
 	 <link rel="stylesheet" href="/css/style.css" /> 
-   <script src="/js/jquery.min.js"></script>
-   <script src="/js/jquery.validate.min.js"></script>
-   <script src="/js/my.js"></script>
 </head>
 <body>
-	<div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills pull-right">
-            {{#if user}}
-              <li role="presentation"><a href="/">Dashboard</a></li>
-              <li role="presentation"><a href="/users/logout">Logout</a></li>
-            {{else}}
-              <li role="presentation"><a href="/users/login">Login</a></li>
-              <li role="presentation"><a href="/users/register">Register</a></li>
-            {{/if}}
-          </ul>
-        </nav>
-        <h3 class="text-muted">LoginApp</h3>
-      </div>
-
-
+    <nav>
+      <ul class="nav nav-pills justify-content-end">
+        {{#if user}}
+          <li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+        {{else}}
+          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+        {{/if}}
+      </ul>
+    </nav>
+    <div class="container">
       <div class="row">
         <div class="col-lg-12">
           {{#if success_msg}}
@@ -47,9 +42,14 @@
       </div>
 
       <footer class="footer">
-        <p>&copy; 2015 LoginApp, Inc.</p>
+        <p>&copy; 2017 TouristResApp, Inc.</p>
       </footer>
 
     </div> <!-- /container -->
+    <script type="text/javascript" src="/js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/js/jquery.validate.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui.js"></script>
+    <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
