--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <h2 class="page-header">Account Login</h2>
-<form method="post" action="/users/login">
+<form method="post" action="/login">
   <div class="form-group">
-    <label>Username</label>
-    <input type="text" class="form-control" name="username" placeholder="Username">
+    <label>Email</label>
+    <input type="email" class="form-control" name="email" placeholder="Email">
   </div>
   <div class="form-group">
     <label>Password</label>
