--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,54 +1,2 @@
-<h2 class="page-header">Register</h2>
-{{#if errors}}
-      {{#each errors}}
-        <div class="alert alert-danger">{{msg}}</div>
-      {{/each}}
-{{/if}}
-<form method="post" action="/users/register" id="form-register">
-   <div class="form-group">
-    <label>Username</label>
-    <input type="text" class="form-control" placeholder="Name" name="username" required>
-  </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
-  </div>
-  <div class="form-group">
-    <label>First Name</label>
-    <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
-  </div>
-  <div class="form-group">
-    <label>Last Name</label>
-    <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
-  </div>
-  <div class="form-group">
-    <label>Street Number</label>
-    <input type="text" class="form-control" placeholder="Street Number" name="streetnumber" required>
-  </div>
-  <div class="form-group">
-    <label>Street Name</label>
-    <input type="text" class="form-control" placeholder="Street Name" name="streetname" required>
-  </div>
-  <div class="form-group">
-    <label>City</label>
-    <input type="text" class="form-control" placeholder="City" name="city" required>
-  </div>
-  <div class="form-group">
-    <label>Gender</label>
-    <input type="text" class="form-control" placeholder="Gender" name="gender" required>
-  </div>
-   <div class="form-group">
-    <label>Email</label>
-    <input type="email" class="form-control" placeholder="Email" name="email" required>
-  </div>
-  <div class="form-group">
-    <label>Phone Number</label>
-    <input type="text" class="form-control" placeholder="Phone Number" name="phonenumber" required>
-  </div>
-  <div class="form-group">
-    <label>Date of Birth</label>
-    <input type="text" class="form-control" placeholder="Date of Birth" name="dob" required>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
-
+<a class="btn btn-primary" href="/customer/register" role="button">Customer</a>
+<a class="btn btn-primary" href="/agency/register" role="button">Agency</a>
