--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,2 +1,5 @@
-<a class="btn btn-primary" href="/customer/register" role="button">Customer</a>
-<a class="btn btn-primary" href="/agency/register" role="button">Agency</a>
+<h2 class="page-header">TouristResApp Register</h2>
+
+<a class="btn btn-primary" href="/customer/register" role="button">Customer Register</a>
+<a class="btn btn-primary" href="/agency/register" role="button">Agency Register</a>
+<a class="btn btn-primary" href="/admin/register" role="button">Admin Register</a>
