--- a/views/agency/register.handlebars
+++ b/views/agency/register.handlebars
@@ -1,4 +1,4 @@
-<h2 class="page-header">Register</h2>
+<h2 class="page-header">Agency Register</h2>
 {{#if errors}}
       {{#each errors}}
         <div class="alert alert-danger">{{msg}}</div>
@@ -31,7 +31,7 @@
   </div>
   <div class="form-group">
     <label>Phone Number</label>
-    <input type="text" class="form-control" placeholder="Phone Number" name="phonenumber" required>
+    <input type="text" class="form-control" placeholder="XXXXXXXXXX" name="phonenumber" maxlength="10" required>
   </div>
   <button type="submit" class="btn btn-default">Submit</button>
 </form>
