--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,5 @@
-<h2 class="page-header">Account Login</h2>
-<form method="post" action="/login">
-  <div class="form-group">
-    <label>Email</label>
-    <input type="email" class="form-control" name="email" placeholder="Email">
-  </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" class="form-control" name="password" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+<h2 class="page-header">TouristResApp Login</h2>
+
+<a class="btn btn-primary" href="/customer/login" role="button">Customer Login</a>
+<a class="btn btn-primary" href="/agency/login" role="button">Agency Login</a>
+<a class="btn btn-primary" href="/admin/login" role="button">Admin Login</a>
