more changes :) - with dropdown

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
 /* Space out content a bit */
+#test{
+  padding: 10px;
+  background-color: red;
+}
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
