--- a/views/admin/home.handlebars
+++ b/views/admin/home.handlebars
@@ -1,2 +1,4 @@
- <h2 class="page-header">Admin Dashboard</h2>
+{{> adminHeader}}
+
+<h2 class="page-header">Admin Dashboard</h2>
 <p>Welcome to your dashboard</p>  
