--- a/views/admin/register.handlebars
+++ b/views/admin/register.handlebars
@@ -10,6 +10,14 @@
     <input type="email" class="form-control" placeholder="Email" name="email" required>
   </div>
   <div class="form-group">
+    <label>First Name</label>
+    <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
+  </div>
+  <div class="form-group">
+    <label>Last Name</label>
+    <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
+  </div>
+  <div class="form-group">
     <label>Password</label>
     <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
   </div>
