--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -7,16 +7,46 @@
 	 <link rel="stylesheet" href="/css/jquery-ui.structure.css" /> 
 	 <link rel="stylesheet" href="/css/jquery-ui.theme.css" /> 
 	 <link rel="stylesheet" href="/css/style.css" /> 
+   {{!-- <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io.connect('http://localhost:7777');
+    socket.on('connect', function(data) {
+      socket.emit('join', 'Hello World from client');
+
+    });
+    socket.on('messages', function(data) {
+      alert(data);
+    });
+  </script> --}}
 </head>
 <body>
     <nav>
       <ul class="nav nav-pills justify-content-end">
         {{#if user}}
-          <li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
-          <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
-        {{else}}
-          <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-          <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+            <!--<li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>-->
+        {{else}}  
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Login
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="/customer/login">Customer</a>
+                <a class="dropdown-item" href="/agency/login">Agency</a>
+                <a class="dropdown-item" href="/admin/login">Admin</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                Register
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="/customer/register">Customer</a>
+                <a class="dropdown-item" href="/agency/register">Agency</a>
+                <a class="dropdown-item" href="/admin/register">Admin</a>
+              </div>
+            </li>
         {{/if}}
       </ul>
     </nav>
@@ -47,9 +77,11 @@
 
     </div> <!-- /container -->
     <script type="text/javascript" src="/js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="/js/popper.js"></script>
     <script type="text/javascript" src="/js/bootstrap.js"></script>
     <script type="text/javascript" src="/js/jquery.validate.js"></script>
     <script type="text/javascript" src="/js/jquery-ui.js"></script>
+    <script type="text/javascript" src="/js/handlebars-v4.0.11.js"></script>
     <script type="text/javascript" src="/js/my.js"></script>
 </body>
 </html>
