--- a/views/admin/home.handlebars
+++ b/views/admin/home.handlebars
@@ -1,4 +1,6 @@
-{{> adminHeader}}
+{{> adminheader}}
 
-<h2 class="page-header">Admin Dashboard</h2>
-<p>Welcome to your dashboard</p>  
+<div class="container">
+    <h2 class="">Admin Dashboard</h2>
+    <p>Welcome to your dashboard</p>  
+</div>
