--- a/views/admin/register.handlebars
+++ b/views/admin/register.handlebars
@@ -1,42 +1,48 @@
-<h2 class="page-header">Admin Register</h2>
-{{#if errors}}
-      {{#each errors}}
-        <div class="alert alert-danger">{{msg}}</div>
-      {{/each}}
-{{/if}}
-<form method="post" action="/admin/register" id="form-register">
-   <div class="form-group">
-    <label>Email</label>
-    <input type="email" class="form-control" placeholder="Email" name="email" required>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h2 class="page-header">Admin Register</h2>
+      {{#if errors}}
+            {{#each errors}}
+              <div class="alert alert-danger">{{msg}}</div>
+            {{/each}}
+      {{/if}}
+      <form method="post" action="/admin/register" id="form-register">
+        <div class="form-group">
+          <label>Email</label>
+          <input type="email" class="form-control" placeholder="Email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label>First Name</label>
+          <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
+        </div>
+        <div class="form-group">
+          <label>Last Name</label>
+          <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
+        </div>
+        <div class="form-group">
+          <label>Street Number</label>
+          <input type="text" class="form-control" placeholder="Street Number" name="streetnumber" required>
+        </div>
+        <div class="form-group">
+          <label>Street Name</label>
+          <input type="text" class="form-control" placeholder="Street Name" name="streetname" required>
+        </div>
+        <div class="form-group">
+          <label>City</label>
+          <input type="text" class="form-control" placeholder="City" name="city" required>
+        </div>
+        <div class="form-group">
+          <label>Phone Number</label>
+          <input type="text" class="form-control" placeholder="XXXXXXXXXX" name="phonenumber" maxlength="10" required>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div>
   </div>
-  <div class="form-group">
-    <label>First Name</label>
-    <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
-  </div>
-  <div class="form-group">
-    <label>Last Name</label>
-    <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
-  </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" class="form-control" placeholder="Password" name="password" id="password" required>
-  </div>
-  <div class="form-group">
-    <label>Street Number</label>
-    <input type="text" class="form-control" placeholder="Street Number" name="streetnumber" required>
-  </div>
-  <div class="form-group">
-    <label>Street Name</label>
-    <input type="text" class="form-control" placeholder="Street Name" name="streetname" required>
-  </div>
-  <div class="form-group">
-    <label>City</label>
-    <input type="text" class="form-control" placeholder="City" name="city" required>
-  </div>
-  <div class="form-group">
-    <label>Phone Number</label>
-    <input type="text" class="form-control" placeholder="XXXXXXXXXX" name="phonenumber" maxlength="10" required>
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+</div>
 
