--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,53 +3,42 @@
 <head>
 	<title>TouristResApp</title>
 	 <link rel="stylesheet" href="/css/bootstrap.css" />
+   <link rel="stylesheet" href="/css/dataTables.bootstrap4.min.css" />
 	 <link rel="stylesheet" href="/css/jquery-ui.css" /> 
 	 <link rel="stylesheet" href="/css/jquery-ui.structure.css" /> 
 	 <link rel="stylesheet" href="/css/jquery-ui.theme.css" /> 
 	 <link rel="stylesheet" href="/css/style.css" /> 
-   {{!-- <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io.connect('http://localhost:7777');
-    socket.on('connect', function(data) {
-      socket.emit('join', 'Hello World from client');
-
-    });
-    socket.on('messages', function(data) {
-      alert(data);
-    });
-  </script> --}}
 </head>
 <body>
+    {{#if user}}
+    {{else}}  
     <nav>
-      <ul class="nav nav-pills justify-content-end">
-        {{#if user}}
-            <!--<li class="nav-item"><a class="nav-link" href="/">Dashboard</a></li>
-            <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>-->
-        {{else}}  
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Login
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/customer/login">Customer</a>
-                <a class="dropdown-item" href="/agency/login">Agency</a>
-                <a class="dropdown-item" href="/admin/login">Admin</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Register
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="/customer/register">Customer</a>
-                <a class="dropdown-item" href="/agency/register">Agency</a>
-                <a class="dropdown-item" href="/admin/register">Admin</a>
-              </div>
-            </li>
-        {{/if}}
+      <ul class="nav nav-pills justify-content-end"> 
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Login
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/customer/login">Customer</a>
+            <a class="dropdown-item" href="/agency/login">Agency</a>
+            <a class="dropdown-item" href="/admin/login">Admin</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            Register
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/customer/register">Customer</a>
+            <a class="dropdown-item" href="/agency/register">Agency</a>
+            <a class="dropdown-item" href="/admin/register">Admin</a>
+          </div>
+        </li>
       </ul>
     </nav>
+        {{/if}}
+      
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -65,18 +54,19 @@
             <div class="alert alert-danger">{{error}}</div>
           {{/if}}
           
-          {{{body}}}
-        </div>
-
-        
-      </div>
-
+        </div> 
+      </div> 
+    </div> <!-- /container -->
+    {{{body}}}
       <footer class="footer">
         <p>&copy; 2017 TouristResApp, Inc.</p>
       </footer>
 
-    </div> <!-- /container -->
+    {{!-- </div> <!-- /container --> --}}
     <script type="text/javascript" src="/js/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.12.4.js"></script>
+    <script type="text/javascript" src="/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="/js/dataTables.bootstrap4.min.js"></script>
     <script type="text/javascript" src="/js/popper.js"></script>
     <script type="text/javascript" src="/js/bootstrap.js"></script>
     <script type="text/javascript" src="/js/jquery.validate.js"></script>
