more changes.. CRUD in progress

--- a/views/admin/customeraccounts.handlebars
+++ b/views/admin/customeraccounts.handlebars
@@ -1,6 +1,6 @@
 {{> adminheader}}
 
-<div id="accountstable">
+<div class="topgap">
 <table id="example" class="table accountstable table-striped table-bordered" cellspacing="0" width="100%">
     <t>
         <tr>
