--- a/views/admin/home.handlebars
+++ b/views/admin/home.handlebars
@@ -1,6 +1,6 @@
 {{> adminheader}}
 
 <div class="container">
-    <h2 class="">Admin Dashboard</h2>
+    <h2 class="page-header">Admin Dashboard</h2>
     <p>Welcome to your dashboard</p>  
 </div>
