--- a/views/customer/register.handlebars
+++ b/views/customer/register.handlebars
@@ -40,8 +40,8 @@
           <label>Gender</label>
           <select class="form-control" name="gender" required>
             <option value=""></option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
         </select>
         </div>
         <div class="form-group">
