--- a/views/admin/register.handlebars
+++ b/views/admin/register.handlebars
@@ -13,12 +13,8 @@
           <input type="email" class="form-control" placeholder="Email" name="email" required>
         </div>
         <div class="form-group">
-          <label>First Name</label>
-          <input type="text" class="form-control" placeholder="First Name" name="firstname" required>
-        </div>
-        <div class="form-group">
-          <label>Last Name</label>
-          <input type="text" class="form-control" placeholder="Last Name" name="lastname" required>
+          <label>Name</label>
+          <input type="text" class="form-control" placeholder="Name" name="name" required>
         </div>
         <div class="form-group">
           <label>Password</label>
