--- a/views/admin/viewcustomer.handlebars
+++ b/views/admin/viewcustomer.handlebars
@@ -1,14 +1,10 @@
 {{> adminheader}}
 
-
 <div class="container-fluid detailscon">
   <h2 class="page-header">Customer Details</h2>
   {{#print}}
   <div class="row">
     <div class="col">
-      <div class="form-group">//passport to insert
-          <input readonly  type="text" value="{{id}}" class="form-control" placeholder="Email" name="id" required>
-        </div>
         <div class="form-group">
           <label>Email</label>
           <input readonly  type="email" value="{{email}}" class="form-control" placeholder="Email" name="email" required>
@@ -35,13 +31,21 @@
         </div>
     </div>
     <div class="col">
-      <form method="post" action="/admin/save">
-      <div class="form-group">
+      <form method="post" action="/admin/accounts/customer/{{id}}/save">
+      <div class="row">
+        <div class="col">
+          <button type="submit" class="btn btn-success">Save Changes</button>
+        </div>
+        <div class="col">
+           <a class="btn btn-danger" href="/admin/accounts/customer/{{id}}/delete" role="button">Delete Customer</a>
+        </div>
+      </div>
+      <div class="form-group status">
           <label>Status</label>
           <select class="form-control" name="active" required>
             {{#if active}}
-              <option value="0">Not Active</option>
               <option value="1">Active</option>
+              <option value="0">Not Active</option>
             {{else}}
               <option value="0">Not Active</option>
               <option value="1">Active</option>
@@ -50,7 +54,7 @@
         </div>
         <div class="form-group">
           <label>Email verification</label>
-          <select class="form-control" name="verification" required>
+          <select readonly class="form-control" name="verification" required>
             {{#if verification}}
               <option value="0">Not Verified</option>
               <option value="1">Verified</option>
@@ -60,8 +64,8 @@
             {{/if}}
         </select>
         </div>        
-        <button type="submit" class="btn btn-success">Save Changes</button>
-        </form>
+        {{!-- <button type="submit" class="btn btn-success">Save Changes</button>
+        </form> --}}
         <div class="form-group">
           <label>Street Number</label>
           <input readonly type="text" value="{{streetnumber}}" class="form-control" placeholder="Street Number" name="streetnumber" required>
@@ -75,15 +79,7 @@
           <input readonly type="text" value="{{city}}" class="form-control" placeholder="City" name="city" required>
         </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-8"></div>
-    <div class="col-2">        
-      </div>
-      <div class="col-2">
-        <a class="btn btn-danger" href="/admin/accounts/customer/{{id}}/delete" role="button">Delete Customer</a>
-      </div>
-  </div>
+  </div>  
    </form>
   {{/print}}
 </div>
