--- a/views/agency/register.handlebars
+++ b/views/agency/register.handlebars
@@ -2,11 +2,17 @@
   <div class="row">
     <div class="col-lg-12">
       <h2 class="page-header">Agency Register</h2>
-      {{#if errors}}
-            {{#each errors}}
-              <div class="alert alert-danger">{{msg}}</div>
-            {{/each}}
-      {{/if}}
+      <div id="myModal" class="modal"  tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+              {{#if errors}}
+                    {{#each errors}}
+                      <div class="modal-body modal-success text-center"><h2>{{msg}}</h2></div>
+                    {{/each}}
+              {{/if}}
+            </div>
+        </div> 
+      </div> 
       <form method="post" action="/agency/register" id="form-register">
         <div class="form-group">
           <label>Email</label>
