--- a/views/customer/login.handlebars
+++ b/views/customer/login.handlebars
@@ -2,6 +2,17 @@
   <div class="row">
     <div class="col-lg-12">
       <h2 class="page-header">Customer Login</h2>
+      <div id="myModal" class="modal"  tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+              {{#if errors}}
+                    {{#each errors}}
+                      <div class="modal-body modal-success text-center">{{msg}}</div>
+                    {{/each}}
+              {{/if}}
+            </div>
+        </div> 
+      </div> 
       <form method="post" action="/customer/login">
         <div class="form-group">
           <label>Email</label>
