--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -32,28 +32,28 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href="/customer/register">Customer</a>
             <a class="dropdown-item" href="/agency/register">Agency</a>
-            <a class="dropdown-item" href="/admin/register">Admin</a>
           </div>
         </li>
       </ul>
     </nav>
-        {{/if}}
-      
+    {{/if}}
+
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          {{#if success_msg}}
-            <div class="alert alert-success">{{success_msg}}</div>
-          {{/if}}
+      <div id="myModal" class="modal"  tabindex="-1" role="dialog">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                {{#if success_msg}}
+                  <div class="modal-body modal-success text-center">{{success_msg}}</div>
+                {{/if}}
 
-          {{#if error_msg}}
-            <div class="alert alert-danger">{{error_msg}}</div>
-          {{/if}}
+                {{#if error_msg}}
+                  <div class="modal-body modal-error text-center">{{error_msg}}</div>
+                {{/if}}
 
-          {{#if error}}
-            <div class="alert alert-danger">{{error}}</div>
-          {{/if}}
-          
+                {{#if error}}
+                  <div class="modal-body modal-error text-center">{{error}}</div>
+                {{/if}}
+            </div>
         </div> 
       </div> 
     </div> <!-- /container -->
@@ -64,7 +64,6 @@
 
     {{!-- </div> <!-- /container --> --}}
     <script type="text/javascript" src="/js/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="/js/jquery-1.12.4.js"></script>
     <script type="text/javascript" src="/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="/js/dataTables.bootstrap4.min.js"></script>
     <script type="text/javascript" src="/js/popper.js"></script>
