--- a/views/partials/adminHeader.handlebars
+++ b/views/partials/adminHeader.handlebars
@@ -1,14 +1,14 @@
 <nav>
   <ul class="nav nav-pills justify-content-end">
     <li class="nav-item"><a class="nav-link" href="/admin/home">Dashboard</a></li>
+    <li class="nav-item"><a class="nav-link" href="/admin/accounts/admin">My Details</a></li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="/admin/accounts" id="navbardrop" data-toggle="dropdown">
-          Accounts
+          User Accounts
         </a>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/admin/accounts/customer">Customers</a>
           <a class="dropdown-item" href="/admin/accounts/agency">Agencies</a>
-          <a class="dropdown-item" href="/admin/accounts/admin">Admins</a>
         </div>
       </li>
     <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
