--- a/views/customer/home.handlebars
+++ b/views/customer/home.handlebars
@@ -1,2 +1,6 @@
- <h2 class="page-header">Customer Dashboard</h2>
-<p>Welcome to your dashboard</p>  
+{{> customerheader}}
+
+<div class="container">
+    <h2 class="page-header">Customer Dashboard</h2>
+    <p>Welcome to your dashboard</p>  
+</div>
