--- a/views/partials/adminHeader.handlebars
+++ b/views/partials/adminHeader.handlebars
@@ -1,7 +1,7 @@
 <nav>
   <ul class="nav nav-pills justify-content-end">
     <li class="nav-item"><a class="nav-link" href="/admin/home">Dashboard</a></li>
-    <li class="nav-item"><a class="nav-link" href="/admin/accounts/admin">My Details</a></li>
+    <li class="nav-item"><a class="nav-link" href="/admin/myaccount">My Account</a></li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="/admin/accounts" id="navbardrop" data-toggle="dropdown">
           User Accounts
