--- a/views/admin/agencyaccounts.handlebars
+++ b/views/admin/agencyaccounts.handlebars
@@ -1,5 +1,8 @@
 {{> adminheader}}
 
+<div class="container-fluid detailscon">
+<h2 class="page-header">Agency Accounts</h2>
+</div>
 <div class="topgap">
 <table id="example" class="table accountstable table-striped table-bordered" cellspacing="0" width="100%">
     <t>
