--- a/views/agency/addpackage.handlebars
+++ b/views/agency/addpackage.handlebars
@@ -46,6 +46,10 @@
             <label>Cost ($) - Child</label>
             <input type="text" class="form-control" placeholder="Cost ($) - Child" name="costchild" required>
           </div>
+          <div class="form-group">
+          <label>Package Date</label>
+            <input type='date' class="packagedatepicker" class="form-control"  name='packagedate' placeholder='YYYY-MM-DD' required>
+          </div>
           <button type="submit" class="btn btn-success">Save</button>
         </form>
       </div>  
