--- a/views/agency/editpackage.handlebars
+++ b/views/agency/editpackage.handlebars
@@ -1,53 +1,63 @@
 {{> agencyheader}}
 
-<div class="container-fluid detailscon">
-  <h2 class="page-header">Bus Details</h2>
+<div class="container">
+  <h2 class="page-header">Package Details</h2>
   <div class="row">
+    <div class="col-lg-12">
+
     {{#print}}
-    <div class="col">
-        <div class="form-group">
-          <label>Name</label>
-          <input readonly type="text" value="{{name}}" class="form-control" placeholder="Name" name="name" required>
-        </div>
-        <div class="form-group">
-          <label>Registration Number</label>
-          <input readonly  type="test" value="{{registrationnumber}}" class="form-control" placeholder="Registration Number" name="registrationnumber" required>
-        </div>
-        <div class="form-group">
-          <label>Category</label>
-          <input readonly type="text" value="{{category}}" class="form-control" placeholder="Category" name="category" required>
-        </div>
-    </div>
-    <div class="col">
-      <form method="post" action="/agency/bus/{{id}}/save">
-      <div class="row">
-        <div class="col">
-          <button type="submit" class="btn btn-success">Save Changes</button>
-        </div>
-        <div class="col">
-           <a class="btn btn-danger" href="/agency/bus/{{id}}/delete" role="button">Delete Bus</a>
-        </div>
+    <form method="post" action="/agency/package/add" enctype="multipart/form-data">
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" readonly class="form-control" value="{{name}}" placeholder="Name" name="name" required>
       </div>
-      <div class="form-group status">
-          <label>Status</label>
-          <select class="form-control" name="availability" required>
-            {{#if availability}}
-              <option value="1">Available</option>
-              <option value="0">Not Available</option>
-            {{else}}
-              <option value="0">Not Available</option>
-              <option value="1">Available</option>
-            {{/if}}
+      <div class="form-group">
+        <label>Description</label>
+        <textarea type="text" class="form-control" value="{{description}}" placeholder="Description" name="description" rows="5" required></textarea>
+      </div>
+      <div class="form-group">
+        <label>Tour Length (Hours)</label>
+        <input type="text" class="form-control" value="{{tourlength}}" placeholder="Tour Length" name="tourlength" required>
+      </div>
+      <div class="form-group">
+        <label>Departure Location</label>
+        <input type="text" class="form-control" value="{{departurelocation}}" placeholder="Departure Location" name="departurelocation" required>
+      </div>
+      <div class="form-group">
+        <label>Bus Name</label>
+        <select class="form-control" name="busname" required>
+          <option value=""></option>
+            {{#print}}
+            <option value="{{name}}">{{name}}</option>
+            {{/print}}
         </select>
-        </div>    
-        <div class="form-group">
-          <label>Number of Seats</label>
-          <input readonly type="text" value="{{numberofseats}}" class="form-control" placeholder="Number of Seats" name="numberofseats" required>
-        </div>
-        </form>
-    </div>
+      </div> 
+      <div class="form-group">
+        <label>Departure Time</label>
+        <input type="text" class="form-control" value="{{departuretime}}" placeholder="Departure Time" name="departuretime" required>
+      </div>
+      
+      <div class="form-group">
+        <label>Image</label>
+        <img src="/uploads/{{image}}">
+        <input type="file" class="form-control-file" value="" name="image" accept="image/*" required>
+      </div>
+      <div class="form-group">
+        <label>Cost ($) - Adult</label>
+        <input type="text" class="form-control" value="{{costadult}}" placeholder="Cost ($) - Adult" name="costadult" required>
+      </div>
+      <div class="form-group">
+        <label>Cost ($) - Child</label>
+        <input type="text" class="form-control" value="{{costchild}}" placeholder="Cost ($) - Child" name="costchild" required>
+      </div>
+      <div class="form-group">
+      <label>Package Date</label>
+        <input type='text' id="packagedatepicker" value="{{packagedate}}" class="form-control"  name='packagedate' placeholder='YYYY-MM-DD' required>
+      </div>
+      <button type="submit" class="btn btn-success">Save</button>
+    </form>
     {{/print}}
   </div>  
-   
+   </div>
 </div>
 
