select package complete

--- a/views/partials/customerheader.handlebars
+++ b/views/partials/customerheader.handlebars
@@ -1,6 +1,7 @@
 <nav>
   <ul class="nav nav-pills justify-content-end">
     <li class="nav-item"><a class="nav-link" href="/customer/home">Dashboard</a></li>
+    <li class="nav-item"><a class="nav-link" href="/customer/package">Packages</a></li>
     <li class="nav-item"><a class="nav-link" href="/customer/myaccount">My Account</a></li>
     <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
   </ul>
