--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,13 @@ img {
   margin-bottom: -1%;
 }
 
+.imagePackageCust{
+  height: 100%;
+  width: 100%;
+  margin-bottom: -1%;
+}
+
+
 body {
   padding-top: 20px;
   padding-bottom: 20px;
