completed reserve seat

--- a/views/customer/viewpackage.handlebars
+++ b/views/customer/viewpackage.handlebars
@@ -36,8 +36,7 @@
             <p><b>Child: </b>$ {{costchild}}</p>
           </div>
         </div>
-        <a class="btn btn-success" href="/customer/package/{{id}}/reserveseat" role="button">Select Package</a>
-          
+        <a class="btn btn-success" href="/customer/package/{{id}}/reserveseat" role="button">Reserve Seat</a>
       </div>
     </div>
     {{/print}}
