--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>TouristResApp</title>
 	 <link rel="stylesheet" href="/css/bootstrap.css" />
