--- a/views/admin/customeraccounts.handlebars
+++ b/views/admin/customeraccounts.handlebars
@@ -1,6 +1,8 @@
 {{> adminheader}}
 
-  <h2 class="page-header">Customer Accounts</h2>
+<div class="container-fluid detailscon">
+ <h2 class="page-header">Customer Accounts</h2>
+</div>
 <div class="topgap">
 <table id="example" class="table accountstable table-striped table-bordered" cellspacing="0" width="100%">
     <t>
