--- a/views/partials/customerheader.handlebars
+++ b/views/partials/customerheader.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-lg">
-  <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:example@email.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristresapp@gmail.com</a>
+    <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:touristreservationsystem@outlook.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristreservationsystem@outlook.com</a>
   <button class="navbar-toggler navtext" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon navtext"></span>
   </button>
