--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,3 +42,52 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<div class="aboutus">
+		<div class="container">
+			<div class="w3l-about-heading aboutustext">
+				<h3>About Us</h3>
+				<p class="exclusivetext"> 
+          The Traveller's Guide a travel agent that brings together numerous other travel agencies to provide you with the best offers. <br><br>
+          Our main objectives is to market and promote Sri Lanka as a tourist and travel destination of quality specified in accordance with the 
+          Tourism Development Plan in collaboration with Sri Lanka Tourism Development Authority, Sri Lanka Conventions Bureau and 
+          Sri Lanka Institute of Hotel Management and with all travel and tourism stakeholders. 
+          These efforts are focused to promote Sri Lanka as a gateway to the South Asian Regions and making Sri Lanka known as the 
+          centre of excellence in tourism management and development in the region.           
+        </p>
+      </div>
+			<div class="row">
+        
+      </div>
+		</div>
+	</div>
+<div class="about">
+		<div class="container">
+			<div class="w3l-about-heading">
+				<h3>Our Exclusive Packages</h3>
+				<p class="exclusivetext"> Here's some of our top tour packages. <br>Make sure your are registered to gain exclusive access for a memorable experience! </p>
+			</div>
+			<div class="row about-grids">
+				<div class="col-md-3 about-grid">
+					<div class="about-grid-info effect-1">
+							<h4><a class="navtext" href="sigiriya.html">Sigiriya</a></h4>
+					</div>
+				</div>
+				<div class="col-md-3 about-grid">
+					<div class="about-grid-info about-grid-info1 effect-1">
+						 <h4><a class="navtext"  href="polonnaruwa.html">Polonnaruwa</a></h4>
+					</div>
+				</div>
+				<div class="col-md-3 about-grid">
+					<div class="about-grid-info about-grid-info2 effect-1">
+						<h4><a class="navtext"  href="kandy.html">Kandy</a> </h4>
+					</div>
+				</div>
+				<div class="col-md-3 about-grid">
+					<div class="about-grid-info about-grid-info3 effect-1">
+						<h4><a  class="navtext"  href="galle.html"Galle>Galle</a></h4>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
