--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>TouristResApp</title>
+	<title>The Traveller's Guide</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <meta name="keywords" content="My Trip Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -27,7 +27,7 @@
     {{#if user}}
     {{else}}
     <nav class="navbar fixed-top navbar-expand-lg">
-      <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:example@email.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristresapp@gmail.com</a>
+        <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:touristreservationsystem@outlook.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristreservationsystem@outlook.com</a>
       <button class="navbar-toggler navtext" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon navtext"></span>
       </button>
@@ -35,16 +35,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-md-auto"> 
         <li class="nav-item"><a class="nav-link navtext" href="/">Home</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle navtext" href="#" id="navbardrop" data-toggle="dropdown">
-            Login
-          </a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/customer/login">Customer</a>
-            <a class="dropdown-item" href="/agency/login">Agency</a>
-            <a class="dropdown-item" href="/admin/login">Admin</a>
-          </div>
-        </li>
+        <li class="nav-item"><a class="nav-link navtext" href="/login">Login</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle navtext" href="#" id="navbardrop" data-toggle="dropdown">
             Register
