--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-lg-6"></div>
     <div class="col-lg-6 loginForm">
-      <h2 class="loginHeader">Agency Login</h2>
+      <h2 class="loginHeader">Login</h2>
       <div id="myModal" class="modal"  tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
               <div class="modal-content">
@@ -15,7 +15,7 @@
             </div>
         </div> 
       </div> 
-      <form method="post" action="/agency/login">
+      <form method="post" action="/login">
         <div class="form-group">
           <label>Email</label>
           <input type="email" class="form-control" name="email" placeholder="Email">
@@ -29,5 +29,4 @@
     </div>
   </div>
 </div>
-
 </div>
