--- a/views/agency/addbus.handlebars
+++ b/views/agency/addbus.handlebars
@@ -32,7 +32,7 @@
           </div> 
           
             <div class="col-11"></div>
-          <button type="submit" class="btn btn-success">Save</button>
+          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save</button>
         </form>
       </div>  
   </div>
