--- a/views/customer/register.handlebars
+++ b/views/customer/register.handlebars
@@ -59,8 +59,8 @@
           <label>Date of Birth</label>
           <input type='text' id="datepicker" class="form-control"  name='dateofbirth' placeholder='YYYY-MM-DD' required>
         </div>
-        <div class="col-11"></div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="col-10"></div>
+        <button type="submit" class="btn btn-info"><i class="fa fa-share-square-o" aria-hidden="true"></i> Submit</button>
       </form>
     </div>
   </div>
