--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,39 +2,38 @@
 <html lang="en">
 <head>
 	<title>The Traveller's Guide</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-      <meta name="keywords" content="My Trip Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-      Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-      <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-      {{!-- <link href="/layout/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /> --}}
-      <link rel="stylesheet" href="/layout/css/style.css" type="text/css" media="all" />
-      <link href="/layout/css/font-awesome.css" rel="stylesheet"> 
-      <link href='/layout/css/simplelightbox.min.css' rel='stylesheet' type='text/css'>
-      <link href='https//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-      <link href='https//fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-      {{!-- <script src="/layout/js/jquery-1.11.1.min.js"></script> --}}
-      {{!-- <script src="/layout/js/bootstrap.js"></script> --}}
-      <script src="/layout/js/SmoothScroll.min.js"></script>
-	 <link rel="stylesheet" href="/css/bootstrap.css" />
-   <link rel="stylesheet" href="/css/dataTables.bootstrap4.min.css" />
-	 <link rel="stylesheet" href="/css/jquery-ui.css" /> 
-	 <link rel="stylesheet" href="/css/jquery-ui.structure.css" /> 
-	 <link rel="stylesheet" href="/css/jquery-ui.theme.css" /> 
-	 <link rel="stylesheet" href="/css/style.css" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="keywords" content="My Trip Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
+  Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+  <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+  {{!-- <link href="/layout/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" /> --}}
+  <link rel="stylesheet" href="/layout/css/style.css" type="text/css" media="all" />
+  <link href='/layout/css/simplelightbox.min.css' rel='stylesheet' type='text/css'>
+  <link href='https//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+  <link href='https//fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  {{!-- <script src="/layout/js/jquery-1.11.1.min.js"></script> --}}
+  {{!-- <script src="/layout/js/bootstrap.js"></script> --}}
+  <script src="/layout/js/SmoothScroll.min.js"></script>
+  <link rel="stylesheet" href="/css/font-awesome.css" />
+  <link rel="stylesheet" href="/css/bootstrap.css" />
+  <link rel="stylesheet" href="/css/dataTables.bootstrap4.min.css" />
+  <link rel="stylesheet" href="/css/jquery-ui.css" /> 
+  <link rel="stylesheet" href="/css/jquery-ui.structure.css" /> 
+  <link rel="stylesheet" href="/css/jquery-ui.theme.css" /> 
+  <link rel="stylesheet" href="/css/style.css" /> 
 </head>
 <body>
     {{#if user}}
     {{else}}
     <nav class="navbar fixed-top navbar-expand-lg">
-        <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:touristreservationsystem@outlook.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristreservationsystem@outlook.com</a>
+        <a class="navbar-brand navtext" href="/">The Traveller's Guide</a>
       <button class="navbar-toggler navtext" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon navtext"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-md-auto"> 
-        <li class="nav-item"><a class="nav-link navtext" href="/">Home</a></li>
+      <ul class="navbar-nav ml-md-auto">
         <li class="nav-item"><a class="nav-link navtext" href="/login">Login</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle navtext" href="#" id="navbardrop" data-toggle="dropdown">
@@ -88,8 +87,17 @@
     
   <!-- footer -->
 	<div class="footer">
-			<div class="copyright text-center">
-				<p>© 2017 The Traveller's Guide. All Rights Reserved  </p>
+			<div class="text-center">
+        <div align="center" class="socialbtns">
+          <ul>
+            <li><a href="mailto:touristreservationsystem@outlook.com" class="fa fa-lg fa-envelope"></a></li>
+            <li><a href="#" class="fa fa-lg fa-facebook"></a></li>
+            <li><a href="#" class="fa fa-lg fa-twitter"></a></li>
+            <li><a href="#" class="fa fa-lg fa-pinterest"></a></li>
+            <li><a href="#" class="fa fa-lg fa-instagram"></a></li>
+          </ul>
+      </div>
+        <p>© 2017 The Traveller's Guide. All Rights Reserved  </p>
 			</div>
 	</div>
 
