--- a/public/layout/css/style.css
+++ b/public/layout/css/style.css
@@ -24,21 +24,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
  .loginForm{
    margin-top: 15%;
-   background: rgba(255, 255, 255, 0.5);
-   padding: 0% 20% 5% 20%;
+   background: rgba(255, 255, 255, 0.8);
+   padding: 0% 0% 5% 0%;
    border-radius: 10px;
  }
 
+
  .registerForm{
     margin-top: 8%;
-    background: rgba(255, 255, 255, 0.4);
+    background: rgba(255, 255, 255, 0.8);
     padding: 0% 20% 5% 20%;
     border-radius: 10px;
   }
 
   .addpackForm{
     margin-top: 20%;
-    background: rgba(255, 255, 255, 0.4);
+    background: rgba(255, 255, 255, 0.6);
     padding: 0% 20% 5% 20%;
     border-radius: 10px;
     margin-bottom: 8%;
@@ -56,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   }
  
  .loginHeader{
-   padding-top: 0%;
+   padding-top: -10%;
    margin-bottom: 5%;
  }
 
@@ -74,17 +75,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     height: 300px;
     width: 300px;
     position: relative;
-    top: -180px !important;
+    top: -190px !important;
     border-width:2px !important;
     border-style: solid;
     border-color: #fff;
     margin: 0 auto;
+    background: rgba(136, 124, 124, 0.3);    
 }
 
 .carouselCaptionText{
     margin-top: 100px;
     text-shadow: 4px 4px 4px #000000;
-    font-size: 26pt;
+    font-size: 30pt;
 }
 
 .carouselCaptionSubText{
@@ -113,7 +115,7 @@ nav {
     border: none !important;
 	/*background: none !important;
     background-color: transparent !important;*/
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(112, 111, 111, 0.5);
     min-height: 0 !important;
 	color: white !important;
 	padding-left: 10% !important;
@@ -125,7 +127,7 @@ nav {
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
-    height: 60px;
+    height: 80px;
     background-color: #f5f5f5;
   }
 
@@ -156,19 +158,30 @@ div#bs-example-navbar-collapse-1 {
 
   .about{
     padding: 4em 0;
-    background: rgba(209, 209, 209, 0.2);
+    margin-bottom: 3%;
+    background: #DCEDF9;
 }
-.w3l-about-heading h2,.codes-heading h2,.w3l-contact-heading h2 {
+
+.aboutus{
+    padding: 5% 0%;
+    background-image: url("/layout/images/homebackground.jpg");
+}
+
+.aboutustext{
+    background: rgba(255, 255, 255, 0.8);
+    padding: 5% 2%;
+}
+
+.w3l-about-heading h3,.codes-heading h3,.w3l-contact-heading h3 {
     text-align: center;
-    margin: 0;
-    font-size: 3em;
+    margin-bottom: 40px;
+    font-size: 2em;
     color: black;
-	font-family: 'Pacifico', cursive;
 }
 .w3l-about-heading p,.codes-heading p,.w3l-contact-heading p{
 	text-align: center;
     margin: 1em 0 0 0;
-    font-size: .875em;
+    font-size: 1em;
     color: #383838;
 }
 .about-grids {
