--- a/views/admin/agencyaccounts.handlebars
+++ b/views/admin/agencyaccounts.handlebars
@@ -3,6 +3,14 @@
 <div class="container-fluid cont">
 <div class="container">
     <h2 class="headertext">Agency Accounts</h2>
+    <form method="post" class="form-row"  action="/admin/accounts/agency/search">
+      <div class="form-group col-4">
+        <input type="text"  class="form-control" placeholder="Search by Name" name="search" required>
+      </div>
+      <div class="col-2">
+          <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        </div>
+    </form>
     <div class="row listreservationdivHeader">
             <div class="col-3 text-center">
                 <h6 class="listreservationtext">Name</h6>
@@ -35,7 +43,7 @@
                 <p class="listreservationtext">{{verification}}</p>
             </div>
             <div class="col-2 text-center">
-                <a class="btn btn-success" href="/admin/accounts/agency/{{id}}" role="button">Edit</a>
+                <a class="btn btn-success" href="/admin/accounts/agency/{{id}}" role="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
             </div>
     </div>
         {{/print}}
