--- a/views/admin/customeraccounts.handlebars
+++ b/views/admin/customeraccounts.handlebars
@@ -3,6 +3,21 @@
 <div class="container-fluid cont">
 <div class="container">
     <h2 class="headertext">Customer Accounts</h2>
+    <form method="post" class="form-row"  action="/admin/accounts/customer/search">
+      <div class="form-group col-4">
+        <input type="text"  class="form-control" placeholder="Search.." name="search" required>
+      </div>
+      <div class="form-group col-2">
+        <select class="form-control" name="criteria" required>
+            <option value="firstname">First Name</option>
+            <option value="lastname">Last Name</option>
+            <option value="gender">Gender</option>
+            </select>
+      </div>
+      <div class="col-2">
+          <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        </div>
+    </form>
     <div class="row listreservationdivHeader">
             <div class="col-2 text-center">
                 <h6 class="listreservationtext">First Name</h6>
@@ -41,7 +56,7 @@
                 <p class="listreservationtext">{{verification}}</p>
             </div>
             <div class="col-2 text-center">
-                <a class="btn btn-success" href="/admin/accounts/customer/{{id}}" role="button">Edit</a>
+                <a class="btn btn-success" href="/admin/accounts/customer/{{id}}" role="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
             </div>
     </div>
         {{/print}}
