--- a/views/admin/editbus.handlebars
+++ b/views/admin/editbus.handlebars
@@ -1,4 +1,4 @@
-{{> agencyheader}}
+{{> adminheader}}
 
 <div class="container-fluid cont">
 <div class="container">
@@ -22,14 +22,11 @@
         </div>
     </div>
     <div class="col">
-      <form method="post" action="/agency/bus/{{id}}/save">
+      <form method="post" action="">
       <div class="row">
-        <div class="col-5"></div>
+        <div class="col"></div>
         <div class="col">
-          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Changes</button>
-        </div>
-        <div class="col">
-           <a class="btn btn-danger" href="/agency/bus/{{id}}/delete" role="button"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Bus</a>
+           <a class="btn btn-danger" href="/admin/bus/{{id}}/delete" role="button"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Bus</a>
         </div>
       </div>
       <div class="form-group status">
@@ -37,10 +34,8 @@
           <select class="form-control" name="availability" required>
             {{#if availability}}
               <option value="1">Available</option>
-              <option value="0">Not Available</option>
             {{else}}
               <option value="0">Not Available</option>
-              <option value="1">Available</option>
             {{/if}}
         </select>
         </div>    
