--- a/views/admin/viewagency.handlebars
+++ b/views/admin/viewagency.handlebars
@@ -25,10 +25,10 @@
       <form method="post" action="/admin/accounts/agency/{{id}}/save">
       <div class="row">
         <div class="col">
-          <button type="submit" class="btn btn-success">Save Changes</button>
+          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Changes</button>
         </div>
         <div class="col">
-           <a class="btn btn-danger" href="/admin/accounts/agency/{{id}}/delete" role="button">Delete Agency</a>
+           <a class="btn btn-danger" href="/admin/accounts/agency/{{id}}/delete" role="button"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Agency</a>
         </div>
       </div>
       <div class="form-group status">
