--- a/views/admin/viewcustomer.handlebars
+++ b/views/admin/viewcustomer.handlebars
@@ -37,10 +37,10 @@
       <form method="post" action="/admin/accounts/customer/{{id}}/save">
       <div class="row">
         <div class="col">
-          <button type="submit" class="btn btn-success">Save Changes</button>
+          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Changes</button>
         </div>
         <div class="col">
-           <a class="btn btn-danger" href="/admin/accounts/customer/{{id}}/delete" role="button">Delete Customer</a>
+           <a class="btn btn-danger" href="/admin/accounts/customer/{{id}}/delete" role="button"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Customer</a>
         </div>
       </div>
       <div class="form-group status">
@@ -64,9 +64,7 @@
               <option value="0">Not Verified</option>
             {{/if}}
         </select>
-        </div>        
-        {{!-- <button type="submit" class="btn btn-success">Save Changes</button>
-        </form> --}}
+        </div>
         <div class="form-group">
           <label>Street Number</label>
           <input readonly type="text" value="{{streetnumber}}" class="form-control" placeholder="Street Number" name="streetnumber" required>
