--- a/views/admin/viewpackage.handlebars
+++ b/views/admin/viewpackage.handlebars
@@ -1,4 +1,4 @@
-{{> customerheader}}
+{{> adminheader}}
 
 <div class="container-fluid cont">
 <div class="container">
@@ -36,9 +36,11 @@
         </div>
         <div id="custcostrow" class="row">
           <div class="col-12">
+            <p>Latitude {{lat}}</p>
+            <p>Longitude {{lon}}</p>
           </div>
         </div>
-        <a class="btn btn-success" href="/customer/package/{{id}}/reserveseat" role="button"><i class="fa fa-lock" aria-hidden="true"></i> Reserve Seat</a>
+        <a class="btn btn-success" href="/admin/package/{{id}}/reserveseat" role="button"><i class="fa fa-lock" aria-hidden="true"></i> Reserve Seat</a>
       </div>
     </div>
     <div class="form-group col-md-12">
