--- a/views/agency/addpackage.handlebars
+++ b/views/agency/addpackage.handlebars
@@ -56,7 +56,7 @@
             <textarea type="text" class="form-control" placeholder="Description" name="description" rows="21" required></textarea>
           </div>
         <div class="col-10"></div>
-          <button type="submit" class="btn btn-success">Save Package</button>
+          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Package</button>
         </form>
       </div>  
   </div>
