--- a/views/agency/editpackage.handlebars
+++ b/views/agency/editpackage.handlebars
@@ -16,11 +16,12 @@
       </div>
       <div class="col-md-6">
         <div class="row">
+        <div class="col-4"></div>
         <div class="col">
-          <button type="submit" class="btn btn-success">Save Changes</button>
+          <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Changes</button>
         </div>
         <div class="col">
-           <a class="btn btn-danger" href="/agency/package/{{id}}/delete" role="button">Delete Package</a>
+           <a class="btn btn-danger" href="/agency/package/{{id}}/delete" role="button"><i class="fa fa-trash-o" aria-hidden="true"></i> Delete Package</a>
         </div>
       </div>
       <div class="form-group status">
@@ -45,16 +46,16 @@
         <textarea type="text" class="form-control" value="" placeholder="Description" name="description" rows="5" required>{{description}}</textarea>
       </div>
       
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-2">
         <label>Cost ($)</label>
         <input type="text" class="form-control" value="{{cost}}" placeholder="Cost ($)" name="cost" required>
       </div>
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-5">
       <label>Package Date</label>
         <input type='text' id="packagedatepicker" value="{{moment packagedate format="YYYY-MM-DD"}}" class="form-control"  name='packagedate' placeholder='YYYY-MM-DD' required>
       </div>
     {{/print}}
-      <div class="form-group col-md-6">
+      <div class="form-group col-md-5">
         <label>Bus Name</label> 
         <select class="form-control" name="busname" required>
           {{!-- <option value="{{busname}}">{{busname}}</option> --}}
