--- a/views/agency/register.handlebars
+++ b/views/agency/register.handlebars
@@ -43,8 +43,8 @@
           <label>Phone Number</label>
           <input type="text" class="form-control" placeholder="XXXXXXXXXX" name="phonenumber" maxlength="10" required>
         </div>
-        <div class="col-11"></div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="col-10"></div>
+        <button type="submit" class="btn btn-info"><i class="fa fa-share-square-o" aria-hidden="true"></i> Submit</button>
       </form>
     </div>
   </div>
