--- a/views/customer/mydetails.handlebars
+++ b/views/customer/mydetails.handlebars
@@ -40,9 +40,9 @@
           <input type="text" value="{{phonenumber}}" class="form-control" placeholder="XXXXXXXXXX" name="phonenumber" maxlength="10" required>
         </div>
         <div class="row">
-            <div class="col-9"></div>
+            <div class="col-8"></div>
             <div class="col">
-            <button type="submit" class="btn btn-success">Save Changes</button>
+            <button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save Changes</button>
             </div>
       </div> 
       
