--- a/views/customer/viewreservations.handlebars
+++ b/views/customer/viewreservations.handlebars
@@ -3,6 +3,20 @@
 <div class="container-fluid cont">
 <div class="container">
     <h2 class="headertext">Reservations</h2>
+    <form method="post" class="form-row"  action="/customer/reservation/search">
+      <div class="form-group col-4">
+        <input type="text"  class="form-control" placeholder="Search.." name="search" required>
+      </div>
+      <div class="form-group col-3">
+        <select class="form-control" name="criteria" required>
+            <option value="confirm">Confirm</option>
+            <option value="ticketnumber">Ticket Number</option>
+        </select>
+      </div>
+      <div class="col-2">
+          <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+        </div>
+    </form>
     <div class="row listreservationdivHeader">
             <div class="col-2 text-center">
                 <h6 class="listreservationtext">Package</h6>
@@ -39,17 +53,17 @@
             </div>
             {{#if confirm}}
             <div class="col-2 text-center">
-                <p>{{ticketnumber}}</p>
+            <p>Confirmed: {{ticketnumber}}</p>
             </div>
             <div class="col-2 text-center">
-                <a class="btn btn-danger" href="/customer/reservation/{{reservationid}}/cancel" role="button">Cancel</a>
+                <a class="btn btn-danger" href="/customer/reservation/{{reservationid}}/cancel" role="button"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
             </div>
             {{else}}
                 <div class="col-2 text-center">
-                    <a class="btn btn-success" href="/customer/reservation/{{reservationid}}/confirm" role="button">Pay</a>
+                <a class="btn btn-success" href="/customer/reservation/{{reservationid}}/confirm" role="button"><i class="fa fa-money" aria-hidden="true"></i> Pay</a>
                 </div>
                 <div class="col-2 text-center">
-                    <a class="btn btn-danger" href="/customer/reservation/{{reservationid}}/cancel" role="button">Cancel</a>
+                    <a class="btn btn-danger" href="/customer/reservation/{{reservationid}}/cancel" role="button"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
                 </div>
             {{/if}}
     </div>
