--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,8 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -29,6 +31,24 @@
         <div class="carouselCaption">
           <h3 class="carouselCaptionText">Kandy</h3>
           <p class="carouselCaptionSubText">Discover the sacred city of Kandy !</p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/layout/images/dambulla.jpg" alt="Fourth slide">
+      <div class="carousel-caption kb_caption slider-grid">
+        <div class="carouselCaption">
+          <h3 class="carouselCaptionText">Dambulla</h3>
+          <p class="carouselCaptionSubText">Experience the Golden Temple of Dambulla !</p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/layout/images/nuwaraeliya.jpg" alt="Fifth slide">
+      <div class="carousel-caption kb_caption slider-grid">
+        <div class="carouselCaption">
+          <h3 class="carouselCaptionText">Nuwara Eliya</h3>
+          <p class="carouselCaptionSubText">Witness the beauty of the city of light !</p>
         </div>
       </div>
     </div>
@@ -60,6 +80,7 @@
       </div>
 		</div>
 	</div>
+
 <div class="about">
 		<div class="container">
 			<div class="w3l-about-heading">
