--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="container-fluid custLogCont">
   <div class="container">
-  <div class="row">
+  <div class="row loginRow">
     <div class="col-lg-6"></div>
     <div class="col-lg-6 loginForm">
       <h2 class="loginHeader">Login</h2>
@@ -15,16 +15,17 @@
             </div>
         </div> 
       </div> 
-      <form method="post" action="/login">
-        <div class="form-group">
+      <form method="post" class="form-row" action="/login">
+        <div class="form-group col-md-12">
           <label>Email</label>
           <input type="email" class="form-control" name="email" placeholder="Email">
         </div>
-        <div class="form-group">
+        <div class="form-group col-md-12">
           <label>Password</label>
           <input type="password" class="form-control" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <div class="col-md-9"></div>
+        <button type="submit" class="btn btn-info"><i class="fa fa-share-square-o" aria-hidden="true"></i> Submit</button>
       </form>
     </div>
   </div>
