--- a/views/partials/adminHeader.handlebars
+++ b/views/partials/adminHeader.handlebars
@@ -1,12 +1,11 @@
 <nav class="navbar fixed-top navbar-expand-lg">
-  <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:touristreservationsystem@outlook.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristreservationsystem@outlook.com</a>
+  <a class="navbar-brand navtext" href="/admin/home">The Traveller's Guide</a>
   <button class="navbar-toggler navtext" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon navtext"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ml-md-auto"> 
-    <li class="nav-item"><a class="nav-link navtext" href="/admin/home">Home</a></li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="/admin/accounts" id="navbardrop" data-toggle="dropdown">
           User Accounts
@@ -16,6 +15,9 @@
           <a class="dropdown-item" href="/admin/accounts/agency">Agencies</a>
         </div>
       </li>
+    <li class="nav-item"><a class="nav-link navtext" href="/admin/package">Packages</a></li>
+    <li class="nav-item"><a class="nav-link navtext" href="/admin/reservation">Reservations</a></li>
+    <li class="nav-item"><a class="nav-link navtext" href="/admin/bus">Buses</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/admin/mydetails">My Details</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/logout">Logout</a></li>
   </ul>
