--- a/views/partials/agencyheader.handlebars
+++ b/views/partials/agencyheader.handlebars
@@ -1,14 +1,14 @@
 <nav class="navbar fixed-top navbar-expand-lg">
-   <a class="navbar-brand navtext" href="#">The Traveller's Guide</a> <a id="navemail" class="navtext" href="mailto:touristreservationsystem@outlook.com"><i class="fa fa-envelope" aria-hidden="true"></i> touristreservationsystem@outlook.com</a>
+   <a class="navbar-brand navtext" href="/agency/home">The Traveller's Guide</a>
   <button class="navbar-toggler navtext" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon navtext"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav ml-md-auto"> 
-    <li class="nav-item"><a class="nav-link navtext" href="/agency/home">Home</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/agency/bus">Buses</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/agency/package">Packages</a></li>
+    <li class="nav-item"><a class="nav-link navtext" href="/agency/reservation">Reservations</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/agency/mydetails">My Details</a></li>
     <li class="nav-item"><a class="nav-link navtext" href="/logout">Logout</a></li>
   </ul>
