--- a/views/admin/viewpackages.handlebars
+++ b/views/admin/viewpackages.handlebars
@@ -20,7 +20,7 @@
                     <h5 class="listpackagetext">{{name}}</h5>
                     <p class="listpackagetext">Tour Length: {{tourlength}}</p>
                     <p class="listpackagetext">Departure Time: {{departuretime}}</p>
-                    <p class="listpackagetext" style="float:left; padding-right:80px">Cost: ${{cost}}</p>
+                    <p class="listpackagetext" style="float:left; padding-right:80px">Cost: Rs. {{cost}}</p>
                     </a>
                     <a class="btn btn-success" href="/admin/package/{{id}}/edit" role="button"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
                 </div>
