--- a/views/customer/viewpackages.handlebars
+++ b/views/customer/viewpackages.handlebars
@@ -20,7 +20,7 @@
                 <h5 class="listpackagetext">{{name}}</h5>
                     <p class="listpackagetext">Tour Length: {{tourlength}}</p>
                     <p class="listpackagetext">Departure Time: {{departuretime}}</p>
-                    <p class="listpackagetext">Cost: ${{cost}}</p>
+                    <p class="listpackagetext">Cost: Rs. {{cost}}</p>
                     </a>
                 </div>
             </div> 
