--- a/views/admin/editpackage.handlebars
+++ b/views/admin/editpackage.handlebars
@@ -43,8 +43,8 @@
       </div>
       
       <div class="form-group col-md-6">
-        <label>Cost ($)</label>
-        <input readonly type="text" class="form-control" value="{{cost}}" placeholder="Cost ($)" name="cost" required>
+        <label>Cost (Rs.)</label>
+        <input readonly type="text" class="form-control" value="{{cost}}" placeholder="Cost (Rs.)" name="cost" required>
       </div>
       <div class="form-group col-md-6">
       <label>Package Date</label>
