--- a/views/admin/viewreservations.handlebars
+++ b/views/admin/viewreservations.handlebars
@@ -28,7 +28,7 @@
                 <h6 class="listreservationtext">Customer Email</h6>
             </div>
             <div class="col-1 text-center">
-                <h6>Cost ($)</h6>
+                <h6>Cost (Rs.)</h6>
             </div>
             <div class="col-1 text-center">
                 <h6>Seat Number</h6>
