--- a/views/agency/addpackage.handlebars
+++ b/views/agency/addpackage.handlebars
@@ -36,8 +36,8 @@
             <input type="file" class="form-control-file" name="image" accept="image/jpeg" required>
           </div>
           <div class="form-group col-md-6">
-            <label>Cost ($)</label>
-            <input type="text" class="form-control" placeholder="Cost ($)" name="cost" required>
+            <label>Cost (Rs.)</label>
+            <input type="text" class="form-control" placeholder="Cost (Rs.)" name="cost" required>
           </div>
           <div class="form-group col-md-6">
           <label>Package Date</label>
