--- a/views/agency/editpackage.handlebars
+++ b/views/agency/editpackage.handlebars
@@ -47,8 +47,8 @@
       </div>
       
       <div class="form-group col-md-2">
-        <label>Cost ($)</label>
-        <input type="text" class="form-control" value="{{cost}}" placeholder="Cost ($)" name="cost" required>
+        <label>Cost (Rs.)</label>
+        <input type="text" class="form-control" value="{{cost}}" placeholder="Cost (Rs.)" name="cost" required>
       </div>
       <div class="form-group col-md-5">
       <label>Package Date</label>
