--- a/views/customer/viewreservations.handlebars
+++ b/views/customer/viewreservations.handlebars
@@ -25,7 +25,7 @@
                 <h6 class="listreservationtext">Departure Time</h6>
             </div>
             <div class="col-2 text-center">
-                <h6>Cost ($)</h6>
+                <h6>Cost (Rs.)</h6>
             </div>
             <div class="col-2 text-center">
                 <h6>Seat Number</h6>
