--- a/views/admin/viewpackage.handlebars
+++ b/views/admin/viewpackage.handlebars
@@ -4,7 +4,7 @@
 <div class="container">
   <h2 class="headertext">Package Details</h2>
     {{#print}}
-    <div class="row">
+    <div class="row viewpackagerow">
       <div class="col viewpackageimagediv">
           <img class="viewpackageimage" src="/uploads/{{image}}">
       </div>
