--- a/views/customer/viewpackage.handlebars
+++ b/views/customer/viewpackage.handlebars
@@ -4,7 +4,7 @@
 <div class="container">
   <h2 class="headertext">Package Details</h2>
     {{#print}}
-    <div class="row">
+    <div class="row viewpackagerow">
       <div class="col viewpackageimagediv">
           <img class="viewpackageimage" src="/uploads/{{image}}">
       </div>
@@ -42,11 +42,11 @@
       </div>
     </div>
     <div class="form-group col-md-12">
-      <label>Tour Location</label><br>
+      {{!-- <label>Tour Location</label><br>
       <div id="viewus2" style="width: 1050px; height: 400px; margin-bottom: 100px;"></div><br>		
       Lat.: <input hidden readonly type="text" name="lat" value="{{lat}}" id="viewus2-lat"/>
       Long.: <input hidden readonly type="text" style="" value="{{lon}}" name="lon" id="viewus2-lon"/> 
-      <div class="input_fields_wrap"></div>
+      <div class="input_fields_wrap"></div> --}}
     </div>
     {{/print}}
 </div>
