--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,11 @@ Space out content a bit
   background-color: red;
 }
 
+.viewpackagerow{
+  background: rgba(255, 255, 255, 0.8);
+  padding: 5% 0%;
+  border-radius: 15px;
+}
 .navbar-brand{
   font: 25px;
   font-weight: bold;
@@ -40,7 +45,7 @@ Space out content a bit
 
 
 .listreservationdiv, .listreservationdivHeader{
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.9);
 }
 
 a:hover, a:visited, a:link, a:active
@@ -95,11 +100,12 @@ h2{
   height: 380px;
   padding: 0% 2% 2% 2%;
   border-radius: 15px;
+  margin-top: 20px;
 }
 
 .listpackage{
-  background: rgba(255, 255, 255, 0.7);
-  height: 360px;
+  background: rgba(255, 255, 255, 0.8);
+  height: 380px;
   padding: 5% 5% 0% 5%;
   border-radius: 15px;
   box-shadow: 2px 2px 2px #c5c5c5, -1px -1px #c5c5c5;
@@ -214,7 +220,7 @@ h2{
 }
 
 .colorinfo{
-  background: rgba(236, 236, 236, 0.7);
+  background: rgba(236, 236, 236, 0.8);
   height: 300px !important;
   width: 300px !important;
 }
