--- a/views/admin/customeraccounts.handlebars
+++ b/views/admin/customeraccounts.handlebars
@@ -14,9 +14,10 @@
             <option value="gender">Gender</option>
             </select>
       </div>
-      <div class="col-2">
+        <div class="col-2">
           <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
         </div>
+        <div class="col-2"></div>
     </form>
     <div class="row listreservationdivHeader">
             <div class="col-2 text-center">
