--- a/views/agency/addbus.handlebars
+++ b/views/agency/addbus.handlebars
@@ -16,7 +16,12 @@
           </div>
           <div class="form-group col-md-6">
             <label>Category</label>
-            <input type="text" class="form-control" placeholder="Category" name="category" required>
+            <select class="form-control" name="availabity" required>
+                <option value=""></option>
+                <option value="AC">AC</option>
+                <option value="Semi Luxury">Semi Luxury</option>
+                <option value="Luxury">Luxury</option>
+            </select>
           </div>
           <div class="form-group col-md-3">
             <label>Number of Seats</label>
