--- a/views/agency/viewpackage.handlebars
+++ b/views/agency/viewpackage.handlebars
@@ -4,7 +4,7 @@
 <div class="container">
   <h2 class="headertext">Package Details</h2>
     {{#print}}
-    <div class="row">
+    <div class="row viewpackagerow">
       <div class="col viewpackageimagediv">
           <img class="viewpackageimage" src="/uploads/{{image}}">
       </div>
@@ -35,21 +35,21 @@
           </div>
         </div>
         <div id="custcostrow" class="row">
-          <div class="col-12">
+          {{!-- <div class="col-12">
             <p>Latitude {{lat}}</p>
             <p>Longitude {{lon}}</p>
-          </div>
+          </div> --}}
         </div>
         <a class="btn btn-success" href="/agency/package/{{id}}/reserveseat" role="button"><i class="fa fa-lock" aria-hidden="true"></i> Reserve Seat</a>
       </div>
     </div>
-    <div class="form-group col-md-12">
+    {{!-- <div class="form-group col-md-12">
       <label>Tour Location</label><br>
       <div id="viewus2" style="width: 1050px; height: 400px; margin-bottom: 100px;"></div><br>		
       Lat.: <input hidden readonly type="text" name="lat" value="{{lat}}" id="viewus2-lat"/>
       Long.: <input hidden readonly type="text" style="" value="{{lon}}" name="lon" id="viewus2-lon"/> 
       <div class="input_fields_wrap"></div>
-    </div>
+    </div> --}}
     {{/print}}
 </div>
 </div>
