--- a/views/customer/viewreservations.handlebars
+++ b/views/customer/viewreservations.handlebars
@@ -53,7 +53,7 @@
             </div>
             {{#if confirm}}
             <div class="col-2 text-center">
-            <p>Confirmed: {{ticketnumber}}</p>
+            <p>{{ticketnumber}}</p>
             </div>
             <div class="col-2 text-center">
                 <a class="btn btn-danger" href="/customer/reservation/{{reservationid}}/cancel" role="button"><i class="fa fa-ban" aria-hidden="true"></i> Cancel</a>
