--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -106,6 +106,7 @@
     <script type="text/javascript" src="/js/jquery-3.2.1.js"></script>
     <script type="text/javascript" src='http://maps.google.com/maps/api/js?libraries=places&key=AIzaSyCbgdCayYKKW9PE9JHo3lzYt4ccxfCkGHw'></script>
     <script type="text/javascript" src="/js/locationpicker.jquery.js"></script>
+    <script type="text/javascript" src="/js/locationpicker1.jquery.js"></script>
     <script type="text/javascript" src="/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="/js/dataTables.bootstrap4.min.js"></script>
     <script type="text/javascript" src="/js/popper.js"></script>
