--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,11 +18,11 @@
       <form method="post" class="form-row" action="/login">
         <div class="form-group col-md-12">
           <label>Email</label>
-          <input type="email" class="form-control" name="email" placeholder="Email">
+          <input type="email" class="form-control" name="email" placeholder="Email" required>
         </div>
         <div class="form-group col-md-12">
           <label>Password</label>
-          <input type="password" class="form-control" name="password" placeholder="Password">
+          <input type="password" class="form-control" name="password" placeholder="Password" required>
         </div>
         <div class="col-md-9"></div>
         <button type="submit" class="btn btn-info"><i class="fa fa-share-square-o" aria-hidden="true"></i> Submit</button>
