--- a/views/admin/viewpackage.handlebars
+++ b/views/admin/viewpackage.handlebars
@@ -43,7 +43,7 @@
         <a class="btn btn-success" href="/admin/package/{{id}}/reserveseat" role="button"><i class="fa fa-lock" aria-hidden="true"></i> Reserve Seat</a>
       </div>
     </div>
-    <div class="form-group col-md-12">
+    <div class="form-group col-md-12 viewpackagelocationdiv">
       <label>Tour Location</label><br>
       <div id="viewus2" style="width: 1050px; height: 400px; margin-bottom: 100px;"></div><br>		
       Lat.: <input hidden readonly type="text" name="lat" value="{{lat}}" id="viewus2-lat"/>
