--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,23 +24,27 @@ Space out content a bit
   max-height: 100%;
 } 
 
+.viewpackagelocationdiv{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .activated{
   color: black;
   background: rgb(159, 247, 159)
 }
 
 .reserveseatdiv{
-  margin-bottom: 15%;
   background: rgba(255, 255, 255, 0.8);
-  box-shadow: 2px 2px 2px #c5c5c5, -1px -1px #c5c5c5;
+  /* box-shadow: 2px 2px 2px #c5c5c5, -1px -1px #c5c5c5; */
 }
+
 
 .listreservationdiv, .listreservationdivHeader{
   height: 55px;
   padding: 1% 2% 2% 2%;
   box-shadow: 2px 2px 2px #c5c5c5, -1px -1px #c5c5c5;
   margin-top: 1%;
-  border-radius: 15px;
 }
 
 
@@ -221,7 +225,7 @@ h2{
 
 .colorinfo{
   background: rgba(236, 236, 236, 0.8);
-  height: 300px !important;
+  height: 310px !important;
   width: 300px !important;
 }
 
