--- a/views/agency/addbus.handlebars
+++ b/views/agency/addbus.handlebars
@@ -16,7 +16,7 @@
           </div>
           <div class="form-group col-md-6">
             <label>Category</label>
-            <select class="form-control" name="availabity" required>
+            <select class="form-control" name="category" required>
                 <option value=""></option>
                 <option value="AC">AC</option>
                 <option value="Semi Luxury">Semi Luxury</option>
